[tool.poetry]
name = "python-bindings"
version = "0.1.0"
description = "Official Python bindings for Draftsmith's REST API"
authors = ["ryan <exogenesis@protonmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "*", from="."}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
